Project Paint - Unified Settings: Color #47339

Closed
opened 2016-02-06 12:47:47 +01:00 by Paul · 9 comments

System Information
Operating system and graphics card
Windows 7 gt560; Windows 8.1 hd4000

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional)

Broken: 2.76 48fdd6

Short description of error
This little checkbox in Texture Paint mode, Project Paint has little bug. As description is saying "Instead of per brush color, the color is shared across brushes". If unchecked everything works fine. After checking this option, whenever you open painting widget like for eg, when you try to {F280405}scale brush with "F". Color below widget does not change.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

Check Unified Settings : Color in Texture Paint mode, sample different colors and check if they change in painting widget.Color_bug.png

**System Information** Operating system and graphics card Windows 7 gt560; Windows 8.1 hd4000 **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) Broken: 2.76 48fdd6 **Short description of error** This little checkbox in Texture Paint mode, Project Paint has little bug. As description is saying "Instead of per brush color, the color is shared across brushes". If unchecked everything works fine. After checking this option, whenever you open painting widget like for eg, when you try to {[F280405](https://archive.blender.org/developer/F280405/color_bug.blend)}scale brush with "F". Color below widget does not change. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps Check Unified Settings : Color in Texture Paint mode, sample different colors and check if they change in painting widget.![Color_bug.png](https://archive.blender.org/developer/F280402/Color_bug.png)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @riceart

Added subscriber: @riceart

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Made a fix for this - P321, however its using hard coded color check.

Though it could be less hassle if there was a read-only color that could be read from the context.

Made a fix for this - [P321](https://archive.blender.org/developer/P321.txt), however its using hard coded color check. Though it could be less hassle if there was a read-only color that could be read from the context.

Added subscriber: @jaggz

Added subscriber: @jaggz

Added subscriber: @Sergey

Added subscriber: @Sergey

@ideasman42, why not to go with this patch for until more global changes are done to the context?

@ideasman42, why not to go with this patch for until more global changes are done to the context?

This issue was referenced by 4912e0e746

This issue was referenced by 4912e0e74666a827315c370314e62fdc4827aed8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47339
No description provided.