Fix T47339: Unified color not used w/ radial control